fix: align items to center.

--- a/assets/source/sass/nav.scss
+++ b/assets/source/sass/nav.scss
@@ -7,7 +7,7 @@
     justify-content: space-between;
     margin-top: calc(#{variables.$base} * 2);
     margin-bottom: calc(#{variables.$base} * 2);
-    align-items: start;
+    align-items: center;
     flex-direction: column;
     gap: calc(#{variables.$base} * 2);
 
